manifests/ghost-longhorn.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 2368
  selector:
    app: ghost
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  selector:
    matchLabels:
      app: ghost
  replicas: 1
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:5.32.0
          # prettier-ignore
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: my-ghost-longhorn-volume
              mountPath: /var/lib/ghost/content
      volumes:
        - name: my-ghost-longhorn-volume
          persistentVolumeClaim:
            claimName: ghost-longhorn-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: ghost.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 80
  tls:
    - secretName: ghost-tls
      hosts:
        - ghost.${DOMAIN}
